fix boostrap navbar not collapsing after clicking on item on mobile device

--- a/desto/src/app/modules/aboutme/aboutme.component.scss
+++ b/desto/src/app/modules/aboutme/aboutme.component.scss
@@ -2,8 +2,8 @@
 
 #imagecontainer {
   // TO DO placeholder
-  width: 600px;
-  height: 600px;
+  max-width: 600px;
+  max-height: 600px;
   border: solid 5px $secondary-color;
 }
 
