--- a/desto/src/app/modules/myskills/myskills.component.scss
+++ b/desto/src/app/modules/myskills/myskills.component.scss
@@ -10,7 +10,7 @@
 }
 
 .chartContainer {
-  width: 500px;
-  height: 500px;
+  max-width: 500px;
+  max-height: 500px;
   border: solid 5px $secondary-color;
 }
